# BiCG

./: CMakeLists.txt  README.md  analyze.ipynb
include/: BiCGSTAB.h  BlBiCGSTAB.h  LU.h  MatVec.h  fbinio.h
src/: BiCGSTAB.cpp  BlBiCGSTAB.cpp  LU.cpp  fbinio.tpp  main.cpp
